--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/dialogflow": "^6.8.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dialogflow": "^1.2.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "uuid": "^10.0.0"
+    "socket.io": "^4.7.5"
   }
 }
